--- a/package.json
+++ b/package.json
@@ -9,21 +9,23 @@
         "@babel/core": "^7.23.6",
         "@babel/preset-env": "^7.23.6",
         "@babel/preset-react": "^7.23.3",
+        "autoprefixer": "^10.4.16",
         "axios": "^1.6.2",
         "babel-loader": "^9.1.3",
         "laravel-mix": "^6.0.49",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.32",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
+        "tailwindcss": "^3.4.0",
         "vite": "^4.0.0"
     },
     "dependencies": {
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
+        "@locomotiveb93/react-chatbot-kit": "0.0.1",
         "@mui/material": "^5.15.0",
-        "feather-icons": "^4.28.0",
-        "@locomotiveb93/react-chatbot-kit": "0.0.1"
+        "feather-icons": "^4.28.0"
     }
 }
