deleted the npm library and have gone standard

--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "dependencies": {
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
-        "@locomotiveb93/react-chatbot-kit": "0.0.1",
         "@mui/material": "^5.15.0",
-        "feather-icons": "^4.28.0"
+        "feather-icons": "^4.28.0",
+        "react-chatbot-kit": "^2.2.2"
     }
 }
